--- a/styles/styles.css
+++ b/styles/styles.css
@@ -240,4 +240,75 @@ img {
   max-width: 100%;
 }
 
+html {
+  font-size: 62.5%;
+}
+
+.wrapper {
+  max-width: 1280px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.header1, .header1--main {
+  font-family: 'Oswald', sans-serif;
+  color: #171717;
+  font-size: 80px;
+  font-size: 8rem;
+  text-transform: uppercase;
+  line-height: 80px;
+}
+
+.header1--main::after {
+  content: "";
+}
+
+.header2 {
+  font-family: 'Oswald', sans-serif;
+  color: #171717;
+  font-size: 42px;
+  font-size: 4.2rem;
+  text-transform: uppercase;
+}
+
+.header {
+  height: 95vh;
+  background: #b9dde7;
+}
+
+.nav {
+  background: #b9dde7;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.nav__list {
+  width: 40%;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.nav__link, .nav__link--active {
+  text-decoration: none;
+  font-family: 'Oswald', sans-serif;
+  color: #171717;
+  font-size: 20px;
+  font-size: 2rem;
+  text-transform: uppercase;
+  line-height: 29px;
+}
+
+.nav__link--active {
+  color: #f6f6f6;
+}
+
 /*# sourceMappingURL=styles.css.map */
