--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,5 @@
 @import 'partials/setup';
 @import 'partials/global';
 @import 'partials/header';
+@import 'partials/nav';
+@import 'partials/footer';
