--- a/styles/styles.css
+++ b/styles/styles.css
@@ -246,34 +246,90 @@ html {
 
 .wrapper {
   max-width: 1280px;
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
 }
 
 .header1, .header1--main {
   font-family: 'Oswald', sans-serif;
   color: #171717;
+  font-weight: bold;
   font-size: 80px;
   font-size: 8rem;
   text-transform: uppercase;
-  line-height: 80px;
+  line-height: 92px;
+}
+
+.header1--main {
+  position: relative;
+  background: #b9dde7;
 }
 
 .header1--main::after {
   content: "";
+  display: inline-block;
+  background: url("../img/Circle-text.png") no-repeat;
+  background-size: contain;
+  position: absolute;
+  top: -30px;
+  right: -40px;
+  width: 100px;
+  height: 100px;
+  -webkit-transform: rotate(-25deg);
+  -ms-transform: rotate(-25deg);
+  transform: rotate(-25deg);
+  z-index: -10;
 }
 
 .header2 {
   font-family: 'Oswald', sans-serif;
   color: #171717;
+  font-weight: bold;
   font-size: 42px;
   font-size: 4.2rem;
   text-transform: uppercase;
 }
 
 .header {
-  height: 95vh;
+  height: 90vh;
   background: #b9dde7;
+}
+
+.header__container1 {
+  padding-top: 30vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
+.header__text-container {
+  position: relative;
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  z-index: 10;
+}
+
+.header__container2 {
+  position: relative;
+}
+
+.header__img-container {
+  position: absolute;
+  width: 60%;
+  top: -40vh;
+  height: 80vh;
+}
+
+.header-img {
+  display: block;
+  height: 100%;
+  -webkit-box-shadow: 10px 10px white;
+  box-shadow: 10px 10px white;
 }
 
 .nav {
@@ -284,10 +340,11 @@ html {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  padding: 10px 0;
 }
 
 .nav__list {
-  width: 40%;
+  width: 50%;
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -301,6 +358,7 @@ html {
   text-decoration: none;
   font-family: 'Oswald', sans-serif;
   color: #171717;
+  font-weight: bold;
   font-size: 20px;
   font-size: 2rem;
   text-transform: uppercase;
@@ -309,6 +367,11 @@ html {
 
 .nav__link--active {
   color: #f6f6f6;
+}
+
+section {
+  padding: 200px 0;
+  background: #f6f6f6;
 }
 
 /*# sourceMappingURL=styles.css.map */
