--- a/styles/partials/_nav.scss
+++ b/styles/partials/_nav.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     padding: 10px 0;
+    height: 10%;
     &__list {
         width: 50%;
         // flex: 1 0 50%;
