--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,5 +2,5 @@
 @import 'partials/global';
 @import 'partials/header';
 @import 'partials/nav';
+@import 'partials/sections';
 @import 'partials/footer';
-@import 'partials/whoisharper';
