--- a/styles/partials/_sections.scss
+++ b/styles/partials/_sections.scss
@@ -1,5 +1,5 @@
 .section {
-    padding: 100px 0;
+    padding: 75px 0;
 
     &__text {
         @include secondaryFont(20);
@@ -14,6 +14,7 @@
         padding: 10px 20px;
         background: $accent;
     }
+
 }
 
 .whoisharper {
@@ -43,17 +44,22 @@
         display: flex;
 
         &:first-of-type {
-            padding-bottom: 50px;
+            margin-bottom: 50px;
         }
         
     }
 
     &__container {
         display: flex;
-        width:50%;
+        width:47.5%;
+        margin-right: 5%;
 
-        &:last-of-type .icon-sec__text-Container {
-            padding-right: 0;
+        // &:last-of-type .icon-sec__text-Container {
+        //     padding-right: 0;
+        // }
+
+        &:last-of-type {
+            margin-right: 0;
         }
         
     }
@@ -64,7 +70,8 @@
 
     &__text-Container {
         width: 90%;
-        padding: 0 10px;
+        // padding: 0 10px;
+        margin-left: 10px;
     }
 
 
@@ -114,4 +121,62 @@
             content: "\f095";
         }
     }
+}
+
+.blog-preview {
+    padding: 50px 0;
+    &__block {
+        // width: 90%;
+        // border: 1px solid black;
+        @extend .icon-sec__block;
+        
+        &:first-of-type {
+            margin-bottom: 0;
+            // @extend .icon-sec__block:first-of-type;
+        }
+        // &:last-of-type {
+        //     margin-left: 10%;
+        // }
+    }
+
+    &__container-1 {
+        width: 47.5%;
+        margin-right: 5%;
+        position: relative;
+        &--text {
+            padding-top: 70px;
+        }
+    }
+
+    &__img-1 {
+        position: absolute;
+        display:block;
+        // top: -80px;
+        top: -78px;
+        width: 100%;
+        height: 120%;
+        box-shadow: 15px 15px 0px $dusk-Blue, -150px 15px 0px $dusk-Blue;
+    }
+
+    &__img-2 {
+        position: absolute;
+        display:block;
+        bottom: -77px;
+        width: 100%;
+        height: 100%;
+        box-shadow: 150px 15px 0px $light-Grey-Blue, 15px 15px 0px $light-Grey-Blue;
+    }
+
+    &__container-2 {
+        width: 47.5%;
+        position: relative;
+        &--text {
+            // padding-bottom: 65px;
+        }
+    }
+
+}
+
+.harperjourney {
+    @extend .whoisharper;
 }
