--- a/styles/styles.css
+++ b/styles/styles.css
@@ -240,6 +240,7 @@ img {
   max-width: 100%;
   -o-object-fit: cover;
   object-fit: cover;
+  display: block;
 }
 
 a {
@@ -397,7 +398,7 @@ html {
 }
 
 .section {
-  padding: 75px 0;
+  padding: 100px 0;
 }
 
 .section__text {
@@ -573,7 +574,6 @@ html {
 
 .blog-preview__img-2 {
   position: absolute;
-  display: block;
   width: 100%;
   height: 125%;
   -webkit-box-shadow: 150px 15px 0px #b9dde7, 15px 15px 0px #b9dde7;
@@ -588,6 +588,67 @@ html {
 .blog-preview__container-2--text {
   width: 40%;
   margin-left: 10%;
+}
+
+.harperjourney__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.harperjourney__photo-container {
+  height: 50%;
+  -webkit-box-shadow: 10px 10px #227284;
+  box-shadow: 10px 10px #227284;
+}
+
+.harperjourney__text-container {
+  width: 60%;
+}
+
+.photos__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.photos__item {
+  width: 30%;
+}
+
+.photos__photo {
+  -webkit-transition: -webkit-transform 0.8s;
+  transition: -webkit-transform 0.8s;
+  -o-transition: transform 0.8s;
+  transition: transform 0.8s;
+  transition: transform 0.8s, -webkit-transform 0.8s;
+}
+
+.photos__link:hover .photos__photo {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+.footer {
+  background: #171717;
+  padding: 5px;
+}
+
+.footer__text {
+  font-family: 'Cabin', sans-serif;
+  color: #171717;
+  font-size: 20px;
+  font-size: 2rem;
+  text-align: center;
+  color: #f6f6f6;
 }
 
 /*# sourceMappingURL=styles.css.map */
