--- a/styles/partials/_sections.scss
+++ b/styles/partials/_sections.scss
@@ -211,3 +211,93 @@
 }
 
 
+.contact {
+    @extend .whoisharper;
+
+    &__container {
+        display:flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-wrap: wrap;
+    }
+
+    &__aside {
+        background: white;
+        width: 35%;
+        padding: 20px;
+        // height: 40%;
+    }
+
+    &__social-media {
+        display: flex;
+        list-style: none;
+        margin-bottom: 15px;
+    }
+
+    &__sm-link {
+        @include primaryFont(24);
+        color: $dusk-Blue;
+        padding: 0 20px;
+
+        &:first-of-type {
+            padding-left: 0;
+        }
+    }
+
+    &__email-container {
+        margin-bottom: 15px;
+    }
+
+    &__email {
+        @include primaryFont(20);
+        text-transform: none;
+    }
+
+    &__address {
+        @include secondaryFont(20);
+        display: flex;
+        flex-direction: column;
+
+        &-line{
+            display: block;
+            margin-bottom: 5px;
+        }
+    }
+
+    &__form {
+        background: $white-shade;
+        width: 60%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        // padding: 500px 0;
+    }
+
+    &__item {
+        border: none;
+        background: white;
+    }
+    
+    &__info {
+        width: 49%;
+        padding: 10px;
+        margin-bottom: 10px;
+        @include secondaryFont(20);
+    }
+    
+    &__message {
+        width: 100%;
+        height: 200px;
+        margin-bottom: 10px;
+        padding: 20px 10px;
+        @include secondaryFont(20);
+    }
+
+    &__submit {
+        @extend .section__btn;
+        background: $accent;
+        width: 100%;
+    }
+}
+
+
