Made changes to Nav bar and Contact page. Started Blog page

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -68,6 +68,11 @@ html {
     margin-bottom: 20px;
 }
 
+.font4 {
+    @include primaryFont(24);
+    margin-bottom: 20px;
+}
+
 ::placeholder {
     color: $black;
 }
