--- a/styles/styles.css
+++ b/styles/styles.css
@@ -316,6 +316,16 @@ html {
   margin-bottom: 20px;
 }
 
+.font4 {
+  font-family: 'Oswald', sans-serif;
+  color: #171717;
+  font-weight: bold;
+  font-size: 24px;
+  font-size: 2.4rem;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
 ::-webkit-input-placeholder {
   color: #171717;
 }
@@ -337,7 +347,7 @@ html {
   background: #b9dde7;
 }
 
-.header--contact {
+.header--other {
   height: 400px;
 }
 
@@ -379,18 +389,25 @@ html {
   box-shadow: 10px 10px white;
 }
 
-.header__contact-container {
+.header__other-container {
   height: 85%;
-  background: url("../img/contact-image-1.jpg") center;
   background-size: cover;
 }
 
-.header__contact-text-container {
+.header__other-container--contact {
+  background: url("../img/contact-image-1.jpg") center;
+}
+
+.header__other-container--blog {
+  background: url("../img/blog-image-1.jpg") center;
+}
+
+.header__other-text-container {
   height: 100%;
   position: relative;
 }
 
-.header__contact-text {
+.header__other-text {
   position: absolute;
   bottom: -43px;
 }
@@ -407,7 +424,7 @@ html {
   height: 10%;
 }
 
-.nav--contact {
+.nav--other {
   height: 15%;
 }
 
@@ -420,6 +437,15 @@ html {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+}
+
+.nav__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .nav__link {
@@ -441,7 +467,7 @@ html {
   padding: 100px 0;
 }
 
-.section__text {
+.section__text, .blog__aside-text {
   font-family: 'Cabin', sans-serif;
   color: #171717;
   font-size: 20px;
@@ -472,7 +498,7 @@ html {
   justify-content: flex-end;
 }
 
-.whoisharper, .icon-sec, .harperjourney, .contact {
+.whoisharper, .icon-sec, .harperjourney, .contact, .blog {
   background: #f6f6f6;
 }
 
@@ -693,7 +719,7 @@ html {
 
 .contact__aside {
   background: white;
-  width: 35%;
+  width: 32%;
   padding: 20px;
 }
 
@@ -755,7 +781,7 @@ html {
 
 .contact__form {
   background: #f6f6f6;
-  width: 60%;
+  width: 63%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -795,6 +821,44 @@ html {
 .contact__submit {
   background: #f38d8d;
   width: 100%;
+}
+
+.blog__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.blog__aside {
+  width: 32%;
+  background: #f6f6f6;
+}
+
+.blog__aside-box {
+  padding: 20px;
+  background: white;
+  margin-bottom: 20px;
+}
+
+.blog__aside-img-container {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.blog__aside-text {
+  margin: 0;
+}
+
+.blog__post-container {
+  width: 63%;
 }
 
 .footer {
